--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/werner94fribourg/learn-at-home-backend#readme",
   "dependencies": {
+    "azure-blobv2": "^1.0.13",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
