--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "nodemailer": "^6.9.1",
     "password-validator": "^5.3.0",
     "sharp": "^0.31.3",
+    "socket.io": "^4.6.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2",
     "validator": "^13.9.0",
